cloudformation/OnDemandMinecraft.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Mappings": {
        "InstanceAmiMap": {
            "ap-east-1": {
                "AMI": "ami-52760d23"
            },
            "ap-northeast-1": {
                "AMI": "ami-09b68f5653871885f"
            },
            "ap-northeast-2": {
                "AMI": "ami-0794a2d1e6d99117a"
            },
            "ap-northeast-3": {
                "AMI": "ami-0d797f6385021e49c"
            },
            "ap-south-1": {
                "AMI": "ami-04125d804acca5692"
            },
            "ap-southeast-1": {
                "AMI": "ami-0bb35a5dad5658286"
            },
            "ap-southeast-2": {
                "AMI": "ami-06705195ce845509c"
            },
            "ca-central-1": {
                "AMI": "ami-0c2a0ac8b164db9e6"
            },
            "cn-north-1": {
                "AMI": "ami-04060e657afb51a27"
            },
            "cn-northwest-1": {
                "AMI": "ami-0b92d6766d8e7fac0"
            },
            "eu-central-1": {
                "AMI": "ami-009c174642dba28e4\t"
            },
            "eu-north-1": {
                "AMI": "ami-88de55f6"
            },
            "eu-west-1": {
                "AMI": "ami-01e6a0b85de033c99"
            },
            "eu-west-2": {
                "AMI": "ami-0c30afcb7ab02233d"
            },
            "eu-west-3": {
                "AMI": "ami-0119667e27598718e"
            },
            "sa-east-1": {
                "AMI": "ami-0dcf15c37a41c965f"
            },
            "us-east-1": {
                "AMI": "ami-026c8acd92718196b"
            },
            "us-east-2": {
                "AMI": "ami-0986c2ac728528ac2"
            },
            "us-gov-east-1": {
                "AMI": "ami-bdd233cc"
            },
            "us-gov-west-1": {
                "AMI": "ami-f73c4696"
            },
            "us-west-1": {
                "AMI": "ami-068670db424b01e9a"
            },
            "us-west-2": {
                "AMI": "ami-07b4f3c02c7f83d59"
            }
        }
    },
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterLabels": {
                "InstanceType": {
                    "default": "Instance Type"
                }
            }
        }
    },
    "Parameters": {
        "InstanceType": {
            "AllowedValues": [
                "t3.micro",
                "t3.small",
                "t3.small",
                "t3.medium",
                "t3.large",
                "t3.xlarge"
            ],
            "Default": "t3.small",
            "Description": "The EC2 instance type.",
            "Type": "String"
        },
        "SshKeypair": {
            "Description": "SSH keypair that the instance will be deployed with.",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "VPC": {
            "Description": "VPC in which the server will be deployed.",
            "Type": "AWS::EC2::VPC::Id"
        }
    },
    "Resources": {
        "Ec2Egress": {
            "DependsOn": "Ec2SecurityGroup",
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "GroupId": {
                    "Ref": "Ec2SecurityGroup"
                },
                "IpProtocol": "-1",
                "ToPort": "-1"
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "Ec2MinecraftTcpIngress": {
            "DependsOn": "Ec2SecurityGroup",
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "25565",
                "GroupId": {
                    "Ref": "Ec2SecurityGroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "25565"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "Ec2MinecraftUdpIngress": {
            "DependsOn": "Ec2SecurityGroup",
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "25565",
                "GroupId": {
                    "Ref": "Ec2SecurityGroup"
                },
                "IpProtocol": "udp",
                "ToPort": "25565"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "Ec2SecurityGroup": {
            "Properties": {
                "GroupDescription": "Security group for Minecraft EC2 instance.",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "$minecraft-sg"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "VPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "Ec2SshIngress": {
            "DependsOn": "Ec2SecurityGroup",
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "FromPort": "22",
                "GroupId": {
                    "Ref": "Ec2SecurityGroup"
                },
                "IpProtocol": "tcp",
                "ToPort": "22"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "ServerInstance": {
            "DependsOn": [
                "Ec2SecurityGroup"
            ],
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "InstanceAmiMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "AMI"
                    ]
                },
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "KeyName": {
                    "Ref": "SshKeypair"
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "Ec2SecurityGroup"
                    }
                ],
                "SourceDestCheck": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "minecraft-instance"
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe\n",
                                "cd /home/ubuntu && git clone https://github.com/Cyronide/OnDemandMinecraft.git && /home/ubuntu/OnDemandMinecraft/instancesetup/bootstrap.sh\n"
                            ]
                        ]
                    }
                }
            },
            "Type": "AWS::EC2::Instance"
        }
    }
}
